--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <div class="content">
                  <h3>For Laptop</h3>
                  <p>Price range from : ₹10,000 to ₹40,000</p>
-                 <a href="D:\detop\load more button\index.html" class="btn">Click for open link</a>
+                 <a href="https://virkpb05.github.io/lovevirk.github.io/" class="btn">Click for open link</a>
                  <div class="icons">
                     <span> <i class="fas fa-calendar"></i>Ram and storage acctend for your need: <br>(4gb to 16or32gb)Ram, and<br>250gb,500gb,1tb and 2tb ssd  </span>
                     <span> <i class="fas fa-user"></i> processore from: i3 4th gen to i7 8th gen</span>
