--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                <a href="#" class="btn">Click to open link</a>
                <div class="icons">
                   <span> <i class="fas fa-calendar"></i>Ram and storage acctend for your need: <br>(4gb to 16or32or64or128gb)Ram, and<br>250gb,500gb,1tb,2tb,to10tb ssd </span>
-                  <span> <i class="fas fa-user"></i>processor from i3 4gen to i9 13gen or latest gen</span>
+                  <span> <i class="fas fa-user"></i>processor from i3 4gen to i9 13gen <br>or latest gen</span>
                </div>
             </div>
          </div>
