--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                  <a href="https://virkpb05.github.io/lovevirk.github.io/" class="btn">Click for open link</a>
                  <div class="icons">
                     <span> <i class="fas fa-calendar"></i>Ram and storage acctend for your need: <br>(4gb to 16or32gb)Ram, and<br>250gb,500gb,1tb and 2tb ssd  </span>
-                    <span> <i class="fas fa-user"></i> processore from: i3 4th gen to i7 8th gen</span>
+                    <span> <i class="fas fa-user"></i>processore from: i3 4th gen to i7 8th gen</span>
                  </div>
               </div>
            </div>
@@ -50,7 +50,7 @@
                <a href="#" class="btn">Click to open link</a>
                <div class="icons">
                   <span> <i class="fas fa-calendar"></i>Ram and storage acctend for your need: <br>(4gb to 16or32or64or128gb)Ram, and<br>250gb,500gb,1tb,2tb,to10tb ssd </span>
-                  <span> <i class="fas fa-user"></i>processor from i3 4gen to i9 13gen <br>or latest gen</span>
+                  <span> <i class="fas fa-user"></i>processor from: i3 4th gen to i9 13th gen <br>or latest gen</span>
                </div>
             </div>
          </div>
